# Negconv

./: .gitignore  CLAUDE.md  pyproject.toml
negconv/: color.py  geometry.py  io.py  lut.py  main.py  params.py  pipeline.py  postproc.py  profiles.py
negconv/gui/: app.py  viewer.py
negconv/gui/templates/: index.html
tests/: test_auto_wb.py  test_color.py  test_crop_rotate.py  test_filmstrip.py  test_gui.py  test_highlight.py  test_js_syntax.py  test_lut.py  test_performance.py  test_pipeline.py  test_smoke.py  test_sprint10.py  test_sprint11.py  test_sprint11b.py  test_sprint2.py  test_sprint3.py  test_sprint7.py  test_sprint8.py  test_synthetic.py
